reports/0041_epi_cert_mutation_full.out/mutants.out/log/crates__tracewake-tui__src__app.rs_line_441_col_9.log

*** crates/tracewake-tui/src/app.rs:441:9: replace TuiApp::notebook_view -> Result<NotebookView, AppError> with Ok(Default::default())

*** mutation diff:
--- crates/tracewake-tui/src/app.rs
+++ replace TuiApp::notebook_view -> Result<NotebookView, AppError> with Ok(Default::default())
@@ -433,17 +433,17 @@
         render_no_human_day_panel(&no_human_day_debug_report(&self.log))
     }
 
     pub fn render_debug_actor_panel(&self, actor_id: &ActorId) -> String {
         render_phase3a_debug_panel(&phase3a_actor_report(&self.agent_state, actor_id))
     }
 
     pub fn notebook_view(&self) -> Result<NotebookView, AppError> {
-        self.current_view()?.notebook.ok_or(AppError::ActorNotBound)
+        Ok(Default::default()) /* ~ changed by cargo-mutants ~ */
     }
 
     pub fn debug_epistemics_view(&self) -> DebugEpistemicsView {
         self.epistemic_projection.debug_epistemics_view()
     }
 
     pub fn debug_beliefs_view(&self, actor_id: &ActorId) -> Result<DebugBeliefsView, AppError> {
         if !self.state.actors().contains_key(actor_id) {


*** /home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/cargo test --no-run --verbose --workspace --locked
       Dirty tracewake-tui v0.1.0 (/tmp/cargo-mutants-tracewake-KPbovd.tmp/crates/tracewake-tui): the file `crates/tracewake-tui/src/app.rs` has changed (1781912111.905577201s, 6s after last build at 1781912105.145577377s)
   Compiling tracewake-tui v0.1.0 (/tmp/cargo-mutants-tracewake-KPbovd.tmp/crates/tracewake-tui)
       Fresh tracewake-content v0.1.0 (/tmp/cargo-mutants-tracewake-KPbovd.tmp/crates/tracewake-content)
       Dirty tracewake-core v0.1.0 (/tmp/cargo-mutants-tracewake-KPbovd.tmp/crates/tracewake-core): the file `crates/tracewake-core/tests/../../tracewake-tui/src/app.rs` has changed (1781912111.905577201s, 6s after last build at 1781912105.145577377s)
   Compiling tracewake-core v0.1.0 (/tmp/cargo-mutants-tracewake-KPbovd.tmp/crates/tracewake-core)
     Running `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_tui --edition=2021 crates/tracewake-tui/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=2fa47a30827e2f80 -C extra-filename=-3fdb9d62463ec1e0 --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps --extern tracewake_content=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps/libtracewake_content-052d9f0ddd5654e3.rlib --extern tracewake_core=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps/libtracewake_core-95b4b25dfac705df.rlib`
     Running `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name anti_regression_guards --edition=2021 crates/tracewake-core/tests/anti_regression_guards.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=1562fde6eff0478d -C extra-filename=-1920b6d35b25dcfe --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps --extern tracewake_core=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps/libtracewake_core-95b4b25dfac705df.rlib`
     Running `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name hidden_truth_gates --edition=2021 crates/tracewake-core/tests/hidden_truth_gates.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=6827b5805fd85fab -C extra-filename=-499dcae7fdb8d686 --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps --extern tracewake_core=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps/libtracewake_core-95b4b25dfac705df.rlib`
     Running `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_tui --edition=2021 crates/tracewake-tui/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=f4c586c4612564df -C extra-filename=-26d4c3d96c485778 --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps --extern tracewake_content=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps/libtracewake_content-052d9f0ddd5654e3.rmeta --extern tracewake_core=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps/libtracewake_core-95b4b25dfac705df.rmeta`
error[E0277]: the trait bound `NotebookView: Default` is not satisfied
   --> crates/tracewake-tui/src/app.rs:441:12
    |
441 |         Ok(Default::default()) /* ~ changed by cargo-mutants ~ */
    |            ^^^^^^^^^^^^^^^^^^ the trait `Default` is not implemented for `NotebookView`

For more information about this error, try `rustc --explain E0277`.
error: could not compile `tracewake-tui` (lib) due to 1 previous error

Caused by:
  process didn't exit successfully: `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_tui --edition=2021 crates/tracewake-tui/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=f4c586c4612564df -C extra-filename=-26d4c3d96c485778 --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps --extern tracewake_content=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps/libtracewake_content-052d9f0ddd5654e3.rmeta --extern tracewake_core=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps/libtracewake_core-95b4b25dfac705df.rmeta` (exit status: 1)
warning: build failed, waiting for other jobs to finish...
error: could not compile `tracewake-tui` (lib test) due to 1 previous error

Caused by:
  process didn't exit successfully: `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_tui --edition=2021 crates/tracewake-tui/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=2fa47a30827e2f80 -C extra-filename=-3fdb9d62463ec1e0 --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps --extern tracewake_content=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps/libtracewake_content-052d9f0ddd5654e3.rlib --extern tracewake_core=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps/libtracewake_core-95b4b25dfac705df.rlib` (exit status: 1)

*** result: Failure(101)
